--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   "dependencies": {
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-uglify": "^3.0.2",
     "gulp-webpcss": "^1.1.1"
   }
 }
