--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "choices.js": "^11.0.3",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
