--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html-nosvg": "^1.0.5",
     "sass": "^1.49.7",
+    "smooth-scrollbar": "^8.8.4",
     "webp-converter": "2.2.3",
     "webpack": "^5.68.0",
     "webpack-stream": "^7.0.0"
